--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "client-austin",
     "version": "1.0.0",
-    "description": "",
+    "description": "1",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
